test/types/type_variables/ferguson/error-named-to-value-partial.good
error-named-to-value-partial.chpl:6: error: named arguments can only be used in type construction to set 'type' or 'param' fields
error-named-to-value-partial.chpl:3: note: field 'y' declared here is not 'type' or 'param'
